# ascend-c-samples

./: CMakeLists.txt  README.md  acl.json  ascend_c_addn.asc  ascend_c_addn_failing.asc  build.sh
